# EmRest

./: README.md  README_CN.md
EmRest/: .gitignore  pyproject.toml  setup.sh
EmRest/src/: alg_op_selector_without_retry.py  alg_with_random_op_selector_without_retry.py  alg_without_mutation.py  equivalence.py  generator.py  manager.py  matcher.py  monitor.py  nlp.py  response.py  swagger.py
EmRest_core/: README.md  install_poetry.sh  requirements.txt  setup.sh
EmRest_core/lib/: README.md
EmRest_core/src/: alg.py  alg_for_fts.py  alg_with_random_op_selector.py  executor.py  factor.py  log.py  nlp.py  rest.py
api-exp-scripts/: .gitignore  README.md  README_CN.md  numberOfParamPerOp.json  pyproject.toml  requirements.txt  setup_all_experiment.sh
api-exp-scripts/src/: run_all.py  run_drat.py  run_evo.py  run_miner.py  run_rl.py
api-exp-scripts/src/analyse/: collect.py  parse.ipynb  rq1_op_cov.tex
api-exp-scripts/src/run/: replicate.py  run_tools.py  services.py  tools.py
api-suts/: .gitignore  OpenAPI v2 to v3.http  README.md  gitlab_cov.py  install_conda.sh  java11.env  java17.env  java8.env  setup.sh
api-suts/services/emb/: README.md  build.py
api-suts/services/rl/: build.py
api-suts/specifications/v2/: features.yaml  gitlab-branch-13.yaml  gitlab-commit-13.yaml  gitlab-groups-13.yaml  ncs.yaml  (+8 more)
api-tools/: README.md  setup.sh
api-tools/ARAT-RL/: main.py  run.py  run_service.py  setup.sh
api-tools/RestCT/: requirements.txt
api-tools/Schemathesis/: requirements.txt  schemathesis_cli.py
api-tools/morest/: fuzzer.py  graph.txt  requirements.txt
(+64 files in other folders)
