[tool.poetry]
name = "exp-scripts"
version = "0.1.0"
description = ""
authors = ["Lixin <lxxu@smail.nju.edu.cn>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
tqdm = "^4.66.4"
pandas = "^2.2.2"
ipywidgets = "^8.1.3"
jinja2 = "^3.1.4"
click = "^8.1.7"
requests = "^2.32.3"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
msoffcrypto-tool = "^5.4.2"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
lxml = "^5.3.0"
tabulate = "^0.9.0"
scipy = "^1.14.1"
venny4py = "^1.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
